fix(site): letter spacing

--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -5,6 +5,7 @@ html {
   font-family: 'Futura PT', sans-serif;
   font-size: var(--font-base-size);
   font-display: auto;
+  letter-spacing: 0.2px;
   line-height: var(--font-base-line-height);
 }
 
